solved overlapping problem of navbar when hover on the project by increasing z index of the navbar

--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,7 @@ hr {
     background-color: rgba(0, 0, 0, 0.5);
     position: sticky;
     top: 0px;
+    z-index: 2;
 }
 
 #logo {
